<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".LaunchActivity">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logo_name"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="@color/logocolor_light"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tag_line_up"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textColor="@color/logocolor_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tag_line_down"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textColor="@color/logocolor_light"/>

</LinearLayout>