<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/constraintLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/cobultBlue"
tools:context=".RegistrationActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/logo_name"
            android:textSize="16sp"
            android:textColor="@color/logocolor_light"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logreg_bg" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:orientation="vertical"
        android:background="@color/cobultBlue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/Textcolor"
                android:hint="Name"
                android:textColorHint="@color/LightGray"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="@drawable/editbox_background"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/Textcolor"
                android:hint="Phone No."
                android:textColorHint="@color/LightGray"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/editbox_background"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/Textcolor"
                    android:hint="Password"
                    android:textSize="14sp"
                    android:textColorHint="@color/LightGray"
                    android:padding="10dp"
                    android:background="@drawable/editbox_background"/>
                <ImageView
                    android:id="@+id/view_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_visibility"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>
            <Button
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reg_btn_value"
                android:textSize="14sp"
                android:textColor="@color/White"
                android:padding="10dp"
                android:background="@drawable/button_background"
                android:layout_marginTop="15dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_text"
                android:textSize="12sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/log_string"
                android:textSize="16sp"
                android:textColor="@color/Midnightblue" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>